@@ -3,6 +3,7 @@
     &#8226; View users locations, websites, and following status on user profiles<br/>
     &#8226; No more jumping on the timeline<br/>
     &#8226; In-line twitpic pictures<br/>
+    &#8226; In-line imgur pictures<br/>
     &#8226; Option to open to in app browser on tweets that contain websites<br/>
     &#8226; Use twitter's automatic link shortening<br/>
     &#8226; Roboto Condensed font option<br/>
